# fsgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RogueLikeEngine.sln  imgui.ini  premake5.lua
Anvil/: CMakeLists.txt  imgui.ini  premake5.lua
Anvil/src/: AnvilApplication.cpp  AnvilApplication.h  AnvilApplication.hpp
Anvil/src/UI/: DebuggerLayer.cpp  DebuggerLayer.hpp  DockingLayer.cpp  DockingLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiRenderer.h  SceneLayer.cpp  SceneLayer.hpp  TestingLayer.cpp  TestingLayer.hpp
Anvil/src/UI/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiRenderer.cpp
ClientApplication/: ClientApplication.vcxproj  ClientApplication.vcxproj.filters  imgui.ini  log.txt  premake5.lua
ClientApplication/src/Application/: EditorApplication.cpp  EditorApplication.h  Sandbox.cpp  Sandbox.h
RogueLikeEngine/: CMakeLists.txt  RogueLikeEngine.vcxproj  RogueLikeEngine.vcxproj.filters  premake5.lua
RogueLikeEngine/src/: RLE.h  RLE.hpp  RLEpch.cpp  RLEpch.h  main.cpp
RogueLikeEngine/src/Core/: EngineBase.cpp  EngineBase.h  EntryPoint.h  PP.h  Version.h  rle_main.cpp
RogueLikeEngine/src/Core/System/: base_token.h
RogueLikeEngine/src/EngineUI/: EngineState.h
RogueLikeEngine/src/EngineUI/EngineStates/: GameScene.cpp  GameScene.h
RogueLikeEngine/src/Log/: Log.cpp  Log.h
RogueLikeEngine/src/Math/: Algebra.h  Constants.h  Matrix.h  Trigonometry.h  Vector.h  Vector2.h  Vector3.h
RogueLikeEngine/src/Math/Shapes/: Triangle.h
RogueLikeEngine/src/RLE/Core/: Core.h  Core.hpp  Engine.cpp  Engine.h  Engine.hpp  EntryPoint.h  Factory.hpp  Input.cpp  Input.hpp  KeyCodes.h  KeyCodes.hpp  Time.cpp  Time.h  Window.cpp  Window.h  rle_main.cpp
RogueLikeEngine/src/RLE/Debug/: Log.cpp  Log.h  Log.hpp
RogueLikeEngine/src/RLE/Events/: Event.h  Event.hpp  EventDispatcher.h  EventDispatcher.hpp  Eventable.cpp  Eventable.h  Eventable.hpp  Events.h  Events.hpp  KeyPressEvent.h  KeyReleaseEvent.h  KeyReleaseEvent.hpp  MouseMoveEvent.h  MousePressEvent.h  MousePressEvent.hpp  MouseReleaseEvent.h  MouseReleaseEvent.hpp  MouseScrollEvent.h  TextInputEvent.h  TextInputEvent.hpp  WindowCloseEvent.h  WindowCloseEvent.hpp  WindowSizeEvent.h  WindowSizeEvent.hpp
RogueLikeEngine/src/RLE/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
RogueLikeEngine/src/RLE/Platform/Windows/: Win64_Window.cpp  Win64_Window.h
RogueLikeEngine/src/RLE/Rendering/: Camera.cpp  Camera.hpp  Color.hpp  FrameBuffer.cpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderCommands.cpp  RenderCommands.hpp  Renderer.cpp  Renderer.hpp  RenderingAPI.cpp  RenderingAPI.h  RenderingAPI.hpp  RenderingContext.cpp  RenderingContext.h  Shader.cpp  Shader.hpp  Vertex.hpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.hpp
RogueLikeEngine/src/RLE/Resources/: CommonShapes.cpp  CommonShapes.hpp  Resource.cpp  Resource.hpp  Shape.cpp
RogueLikeEngine/src/RLE/Scene/Node/: Node.cpp  Node.hpp
RogueLikeEngine/src/RLE/Scene/Node/2D/: ShapeNode.cpp
RogueLikeEngine/src/RLE/UI/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h
RogueLikeEngine/src/RLE/Utils/: UniqueID.inl
RogueLikeEngine/src/Rendering/: Color.h  EngineRenderer.cpp  EngineRenderer.h
RogueLikeEngine/src/Rendering/Graphics/2D/: Drawable2D.h
RogueLikeEngine/src/Rendering/Graphics/3D/: Camera.cpp  Camera.h  GameSceneObject.h  Mesh.cpp  Mesh.h  Renderable3D.h  Transform.cpp  Transform.h
RogueLikeEngine/src/Utils/: NonCopyable.h  UniqueID.h  ref.h
RogueLikeEngine/src/Utils/FiniteStateMachine/: FiniteStateMachine.cpp  FiniteStateMachine.h
RogueLikeEngine/src/impl/API/GLFW/: GLFW_Callback.cpp  GLFW_Window.cpp  GLFW_Window.hpp
RogueLikeEngine/src/impl/API/OpenGL/: OpenGL_FrameBuffer.cpp  OpenGL_IndexBuffer.cpp  OpenGL_IndexBuffer.hpp  OpenGL_RenderingAPI.cpp  OpenGL_RenderingAPI.hpp  OpenGL_Shader.cpp  OpenGL_Shader.hpp  OpenGL_VertexArray.cpp  OpenGL_VertexBuffer.cpp  OpenGL_VertexBuffer.hpp
RogueLikeEngine/src/impl/Platform/Linux/: Linux_Window.hpp
RogueLikeEngine/src/impl/Platform/Windows/: Win64_Window.cpp  Win64_Window.hpp
anvil/src/: AnvilApplication.cpp  AnvilApplication.hpp  Utils.hpp  main.cpp
anvil/src/States/: EditorState.cpp  EditorState.hpp
anvil/src/UI/: DebuggerLayer.cpp  DockingLayer.cpp  DockingLayer.hpp  ImGui_DockSpace.cpp  ImGui_DockSpace.hpp  ImGui_Panel.hpp  ImGui_Renderer.cpp  ImGui_Renderer.hpp  SceneLayer.cpp  SceneLayer.hpp  TestingLayer.cpp  TestingLayer.hpp
docs/contributing/formatting/: SampleClass.hpp
include/: RLE.hpp  fsgl.hpp  fsgl_pch.hpp
include/RLE/Core/: Core.hpp  Engine.hpp  EngineState.hpp  Factory.hpp  Input.hpp  Process.hpp  Time.hpp  Window.hpp
include/RLE/Debug/: Log.hpp
include/RLE/Events/: Event.hpp  EventDispatcher.hpp  Eventable.hpp  KeyPressEvent.hpp  MouseMoveEvent.hpp  MousePressEvent.hpp  MouseReleaseEvent.hpp  MouseScrollEvent.hpp  Signal.hpp  Signal.inl  TextInputEvent.hpp  WindowCloseEvent.hpp
include/RLE/Node/: Aspect.hpp  Component.hpp  Node.hpp  Node.inl
include/RLE/Rendering/: Camera.hpp  FrameBuffer.hpp  GraphicsAPI.hpp  GraphicsHandle.hpp  IndexBuffer.hpp  RenderCommands.hpp  Renderable.hpp  Renderer2D.hpp  RenderingAPI.hpp  ShaderHandle.hpp  VertexArray.hpp  VertexBuffer.hpp
include/RLE/Resources/: CommonShapes.hpp  Geometry.hpp  Shape.hpp
include/RLE/UI/: DockSpace.hpp  Docker.hpp  Panel.hpp  UISpace.hpp
include/impl/: RLE_Node.hpp  RLE_Node.inl  node_helpers.hpp
src/: Aspect.cpp  Camera.cpp  CommonShapes.cpp  Component.cpp  Core.cpp  DockSpace.cpp  Docker.cpp  Engine.cpp  EngineState.cpp  Eventable.cpp  FrameBuffer.cpp  GLFW_Callback.cpp  GLFW_Window.cpp  Geometry.cpp  GraphicsAPI.cpp  GraphicsHandle.cpp  IndexBuffer.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Linux_Window.cpp  Log.cpp  Node.cpp  OpenGL_FrameBuffer.cpp  OpenGL_GraphicsAPI.cpp  OpenGL_IndexBuffer.cpp  OpenGL_RenderingAPI.cpp  OpenGL_Shader.cpp  OpenGL_ShaderHandle.cpp  OpenGL_VertexArray.cpp  OpenGL_VertexBuffer.cpp  Panel.cpp  Process.cpp  RLE_Node.cpp  RLEpch.cpp  Render2D.cpp  RenderCommands.cpp  Renderer.cpp  Renderer2D.cpp  RenderingAPI.cpp  (+16 more)
(+87 files in other folders)
